# konko-conversational-agent

./: DECISIONS.md  README.md  pyproject.toml  research_context.md
configs/: casual_agent.yaml  default_agent.yaml  minimal_agent.yaml
src/konko_agent/: __init__.py  cli.py
src/konko_agent/config/: __init__.py  loader.py  models.py
src/konko_agent/domain/: __init__.py  escalation.py  intent.py  phases.py  state.py  validators.py
src/konko_agent/infrastructure/: __init__.py  llm_client.py  state_store.py
src/konko_agent/orchestration/: __init__.py  agent.py  prompt_builder.py  runtime.py
tests/: conftest.py
tests/test_config/: __init__.py  test_validation.py
tests/test_domain/: test_escalation.py  test_phases.py  test_state.py  test_validators.py
tests/test_e2e/: __init__.py  test_full_conversation.py
tests/test_orchestration/: __init__.py  test_agent.py  test_runtime.py
